--- a/css/style.css
+++ b/css/style.css
@@ -206,12 +206,9 @@ body header h1 a {
 body header h1 a:hover {
   animation: XEROX 1.1s;
 }
-body header nav.navbar div form button {
-  color: black;
-  background-color: azure;
-}
 body header nav.navbar div div.collapse div.dropdown {
   margin-right: 20px;
+  margin-left: 400px;
 }
 body header nav.navbar div div.collapse div.dropdown button.btn {
   background-color: rgb(91, 17, 141);
@@ -276,6 +273,10 @@ body header nav.navbar div div.collapse ul.navbar-nav li.xeroxLista a:hover {
   transition-property: all;
   transition-duration: 95ms;
   transform: scale(1.3);
+}
+body header nav.navbar div div.collapse button.btnShop {
+  margin-left: 350px;
+  border-radius: 20px;
 }
 body header nav.navbar div div.collapsing div.dropdown button.btn {
   background-color: rgb(91, 17, 141);
@@ -514,6 +515,9 @@ a {
     align-items: center;
     margin-bottom: 10px;
   }
+  body header nav.navbar div div.collapse div.dropdown {
+    margin-left: 0px;
+  }
   body header nav.navbar div div.collapse div.dropdown button.btn {
     background-color: rgb(91, 17, 141);
   }
@@ -530,6 +534,9 @@ a {
     padding-left: 30px;
     width: 200px;
   }
+  body header nav.navbar div div.collapse button.btnShop {
+    margin-left: 0px;
+  }
   body header nav.navbar div div.collapsing div.dropdown button.btn {
     background-color: rgb(91, 17, 141);
   }
@@ -540,6 +547,9 @@ a {
     justify-content: flex-start;
     padding-left: 30px;
     width: 200px;
+  }
+  body header nav.navbar div div.collapsing button.btnShop {
+    border-radius: 20px;
   }
   body main section.sectionMain div.carousel {
     margin: 0px 50px 0px 50px;
@@ -555,7 +565,10 @@ a {
     margin-top: 20px;
     padding: 10px 0px 0px 0px;
   }
-  body main section.sectionMain section.banner p, body main section.sectionMain section.banner4 p, body main section.sectionMain .banner1 p, body main section.sectionMain .banner2 p, body main section.sectionMain .banner3 p {
+  body main section.sectionMain section.banner p, body main section.sectionMain section.banner4 p,
+  body main section.sectionMain .banner1 p,
+  body main section.sectionMain .banner2 p,
+  body main section.sectionMain .banner3 p {
     font-size: 30px;
   }
   body main section.sectionMain div.lista1 {
