--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,8 @@
 
 $color_1: azure;
 $color_2: black;
-$font-family_1:'Ubuntu', sans-serif;
+$font-family_1:'Ubuntu',
+sans-serif;
 $background-color_1: rgb(91, 17, 141);
 $background-color_2: azure;
 $background-color_3: rgb(96, 102, 102);
@@ -12,29 +13,37 @@ $background-color_3: rgb(96, 102, 102);
 	0% {
 		border-radius: 0%;
 	}
+
 	25% {
 		border-radius: 50%;
 	}
+
 	40% {
 		background-color: rgb(156, 58, 212);
 	}
+
 	65% {
 		background-color: rgb(210, 141, 250);
 	}
-	80%{
+
+	80% {
 		background-color: rgb(97, 23, 146);
 	}
-	90%{
+
+	90% {
 		background-color: rgb(91, 17, 141);
 	}
 }
+
 * {
 	margin: 0%;
 	padding: 0%;
 }
+
 body {
 	background-color: $background-color_2;
 	font-family: 'Ubuntu';
+
 	header {
 		font-family: $font-family_1;
 		font-weight: 600;
@@ -45,6 +54,7 @@ body {
 		background-color: $background-color_1;
 		display: grid;
 		justify-content: center;
+
 		h1 {
 			text-align: center;
 			font-size: 50px;
@@ -53,31 +63,26 @@ body {
 			font-family: $font-family_1;
 			background-color: $background-color_1;
 			margin-bottom: 0px;
+
 			a {
 				color: $color_1;
 				font-size: 60px;
 				padding: 13px;
+
 				&:hover {
 					animation: XEROX 1.1s;
 				}
 			}
 		}
-		nav.navbar{
-			div{
-				form{
-					button{
-						color: black;
-						background-color: $background-color_2;
-					}
-				}
-			}
-		}
-		nav.navbar{
-			div{
-				div.collapse{
-					div.dropdown{
+
+		nav.navbar {
+			div {
+				div.collapse {
+					div.dropdown {
 						margin-right: 20px;
-						button.btn{
+						margin-left: 400px;
+
+						button.btn {
 							background-color: $background-color_1;
 							border: 0px;
 							font-size: 20px;
@@ -86,26 +91,31 @@ body {
 							padding: 10px 0px 10px 30px;
 							margin: 0px;
 						}
-						ul.dropdown-menu{
+
+						ul.dropdown-menu {
 							background-color: $background-color_1;
 							margin: 0px;
 							padding: 0px;
 							--bs-dropdown-min-width: 0rem;
-							li.xeroxLista1{
+
+							li.xeroxLista1 {
 								display: grid;
 								list-style: none;
 								padding: 5px 0px 5px 0px;
 								text-decoration: none;
 								letter-spacing: 1px;
 								width: 155px;
-								&:hover{
+
+								&:hover {
 									transition-property: all;
 									transition-duration: 95ms;
 									background-color: $background-color_2;
 								}
-								a{
+
+								a {
 									font-size: 15px;
 									color: azure;
+
 									&:hover {
 										transition-property: all;
 										transition-duration: 95ms;
@@ -115,6 +125,7 @@ body {
 							}
 						}
 					}
+
 					ul.navbar-nav {
 						font-family: $font-family_1;
 						font-weight: 600;
@@ -125,6 +136,7 @@ body {
 						margin-bottom: 0px;
 						align-items: center;
 						flex-direction: row;
+
 						li.xeroxLista {
 							display: grid;
 							list-style: none;
@@ -132,8 +144,10 @@ body {
 							text-decoration: none;
 							letter-spacing: 1px;
 							width: 155px;
-							a{
+
+							a {
 								font-size: 20px;
+
 								&:hover {
 									transition-property: all;
 									transition-duration: 95ms;
@@ -142,10 +156,15 @@ body {
 							}
 						}
 					}
+					button.btnShop{
+						margin-left: 350px;
+						border-radius: 20px;
+					}
 				}
-				div.collapsing{
-					div.dropdown{
-						button.btn{
+
+				div.collapsing {
+					div.dropdown {
+						button.btn {
 							background-color: $background-color_1;
 							border: 0px;
 							font-size: 20px;
@@ -154,12 +173,14 @@ body {
 							padding: 10px 0px 10px 30px;
 							margin: 0px;
 						}
-						ul.dropdown-menu{
-							li.xeroxLista1{
+
+						ul.dropdown-menu {
+							li.xeroxLista1 {
 								margin: 0px;
 							}
 						}
 					}
+
 					ul.navbar-nav {
 						font-family: $font-family_1;
 						font-weight: 600;
@@ -172,6 +193,7 @@ body {
 						justify-content: space-evenly;
 						margin-bottom: 0px;
 						align-items: flex-start;
+
 						li.xeroxLista {
 							display: inline-block;
 							list-style: none;
@@ -182,8 +204,10 @@ body {
 							letter-spacing: 1px;
 							width: 155px;
 							display: flex;
-							a{
+
+							a {
 								font-size: 20px;
+
 								&:hover {
 									transition-property: all;
 									transition-duration: 95ms;
@@ -196,31 +220,39 @@ body {
 			}
 		}
 	}
-	main{
+
+	main {
 		margin-top: 150px;
-		section.sectionMain{
-			nav{
+
+		section.sectionMain {
+			nav {
 				margin-bottom: 10px;
-				ol.breadcrumb{
+
+				ol.breadcrumb {
 					margin: 27px 0px 0px 20px;
-					li{
+
+					li {
 						text-decoration: none;
 					}
 				}
 			}
-			div.carousel{
+
+			div.carousel {
 				margin: 0px 150px 0px 150px;
-				height:550px;
-				div.carousel-inner{
-					div.carousel-item{
-						img{
+				height: 550px;
+
+				div.carousel-inner {
+					div.carousel-item {
+						img {
 							height: 550px;
 						}
-						div{
-							h5{
+
+						div {
+							h5 {
 								color: azure;
 							}
-							p{
+
+							p {
 								font-size: 50px;
 								font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 								color: azure;
@@ -229,82 +261,101 @@ body {
 					}
 				}
 			}
-			h2{
+
+			h2 {
 				margin: 30px 30px 0px 30px;
 				font-family: $font-family_1;
 				font-weight: 700;
 			}
-			div.lista{
+
+			div.lista {
 				display: flex;
 				flex-wrap: wrap;
 				justify-content: space-evenly;
 				margin: 0px 20px 0px 20px;
-				div.divLista{
+
+				div.divLista {
 					margin: 20px 30px 40px 30px;
-					&:hover{
+
+					&:hover {
 						transform: scale(1.05);
 						transition-property: all;
 						transition-duration: 95ms;
 						background-color: $background-color_1;
-						h5{
+
+						h5 {
 							color: azure;
 						}
-						a{
+
+						a {
 							color: azure;
 						}
-						div.collapse{
-							div.card{
+
+						div.collapse {
+							div.card {
 								background-color: white;
 								transform: none;
-								p{
+
+								p {
 									background-color: white;
 									transform: none;
 								}
 							}
 						}
 					}
-					img{
+
+					img {
 						height: 450px;
 						width: 286px;
 					}
-					div.card-body{
+
+					div.card-body {
 						display: flex;
 						align-items: center;
 						flex-direction: column;
 						justify-content: flex-start;
-						h5{
+
+						h5 {
 							font-size: 1.20rem;
 						}
-						p{
+
+						p {
 							font-size: 15px;
 						}
-						a.btn{
+
+						a.btn {
 							background-color: $background-color_1;
 							border: 0;
-							&:hover{
+
+							&:hover {
 								background-color: $background-color_2;
 								color: black;
 							}
 						}
-						button.btn-outline-primary{
+
+						button.btn-outline-primary {
 							display: flex;
 							border-width: 0;
-							&:hover{
+
+							&:hover {
 								background-color: $background-color_2;
 								color: azure;
-								a{
+
+								a {
 									color: black;
 								}
 							}
 						}
-						div.carDiv{
+
+						div.carDiv {
 							margin: 20px 30px 0px 30px;
 							background-color: white;
 						}
 					}
 				}
-				div.cartaLista{
-					img{
+
+				div.cartaLista {
+					img {
 						height: 300px;
 						width: 286px;
 					}
@@ -317,6 +368,7 @@ body {
 nav {
 	ul {
 		padding-left: 0;
+
 		li {
 			a {
 				text-decoration: none;
@@ -325,6 +377,7 @@ nav {
 			}
 		}
 	}
+
 	ol {
 		li {
 			a {
@@ -338,64 +391,73 @@ a {
 	list-style-type: none;
 	text-decoration: none;
 }
+
 .row {
 	justify-content: space-evenly;
 	box-sizing: content-box;
 }
-.imgJs{
+
+.imgJs {
 	height: 250px;
 	width: 175px;
 	margin-top: 30px;
 }
-.textJs{
+
+.textJs {
 	color: white;
 }
 
 @media screen and (min-width: 0px) and (max-width:1535px) {
-	body{
-		main{
-            div.contactoDiv{
-                form{
-                    fieldset{
-                        margin: 30px 0px 0px 200px;
-                    }
-                }
+	body {
+		main {
+			div.contactoDiv {
+				form {
+					fieldset {
+						margin: 30px 0px 0px 200px;
+					}
+				}
 			}
 		}
 	}
 }
+
 @media screen and (min-width: 0px) and (max-width:1300px) {
-	body{
+	body {
 		main {
 			justify-items: center;
-			div.contactoDiv{
+
+			div.contactoDiv {
 				grid-template-columns: 60vw;
 				grid-template-rows: auto;
-				grid-template-areas: "ul" "form";
+				grid-template-areas: "ul""form";
+
 				ul {
 					margin: 30px 0px 0px 50px;
 					padding: 0px 0px 0px 120px;
 				}
-                form{
-                    fieldset{
-                        margin: 30px 0px 0px 150px;
-                    }
-                }
+
+				form {
+					fieldset {
+						margin: 30px 0px 0px 150px;
+					}
+				}
 			}
 		}
 	}
 }
+
 @media screen and (max-width:1250px) {
-	body{
-		header{
-			nav.navbar{
-				div{
-					div.collapse{
-						div.dropdown{
-							button.btn{
+	body {
+		header {
+			nav.navbar {
+				div {
+					div.collapse {
+						div.dropdown {
+							button.btn {
 								background-color: $background-color_1;
 							}
-							ul.dropdown-menu{
+
+							ul.dropdown-menu {
 								background-color: $background-color_1;
 							}
 						}
@@ -405,17 +467,19 @@ a {
 		}
 	}
 }
+
 @media screen and (max-width:1050px) {
-	body{
-		header{
-			nav.navbar{
-				div{
-					div.collapse{
-						div.dropdown{
-							button.btn{
+	body {
+		header {
+			nav.navbar {
+				div {
+					div.collapse {
+						div.dropdown {
+							button.btn {
 								background-color: $background-color_1;
 							}
-							ul.dropdown-menu{
+
+							ul.dropdown-menu {
 								background-color: $background-color_1;
 							}
 						}
@@ -423,14 +487,16 @@ a {
 				}
 			}
 		}
-		main{
-			section.sectionMain{
-				div.carousel{
+
+		main {
+			section.sectionMain {
+				div.carousel {
 					margin: 0px 100px 0px 100px;
 					height: 450px;
-					div.carousel-inner{
-						div.carousel-item{
-							img{
+
+					div.carousel-inner {
+						div.carousel-item {
+							img {
 								height: 450px;
 							}
 						}
@@ -440,90 +506,117 @@ a {
 		}
 	}
 }
+
 @media screen and (min-width:0px) and (max-width:909px) {
-	body{
-		header{
+	body {
+		header {
 			display: flex;
 			flex-direction: column;
-			nav.navbar{
-				div{
-					button{
+
+			nav.navbar {
+				div {
+					button {
 						display: flex;
 						justify-content: flex-start;
 						align-items: center;
 						margin-bottom: 10px;
 					}
-					div.collapse{
-						div.dropdown{
-							button.btn{
+
+					div.collapse {
+						div.dropdown {
+							margin-left: 0px;
+							button.btn {
 								background-color: $background-color_1;
 							}
-							ul.dropdown-menu{
+
+							ul.dropdown-menu {
 								background-color: $background-color_1;
 							}
 						}
-						ul.navbar-nav{
+
+						ul.navbar-nav {
 							display: grid;
 							justify-content: start;
-							li.xeroxLista{
+
+							li.xeroxLista {
 								display: grid;
 								justify-content: start;
 								padding-left: 30px;
 								width: 200px;
 							}
 						}
+						button.btnShop{
+							margin-left: 0px;
+						}
 					}
-					div.collapsing{
-						div.dropdown{
-							button.btn{
+
+					div.collapsing {
+						div.dropdown {
+							button.btn {
 								background-color: $background-color_1;
 							}
-							ul.dropdown-menu{
+
+							ul.dropdown-menu {
 								background-color: $background-color_1;
 							}
 						}
-						ul.navbar-nav{
-							li.xeroxLista{
+
+						ul.navbar-nav {
+							li.xeroxLista {
 								justify-content: flex-start;
 								padding-left: 30px;
 								width: 200px;
 							}
 						}
+
+						button.btnShop{
+							border-radius: 20px;
+						}
 					}
 				}
 			}
 		}
-		main{
-			section.sectionMain{
-				div.carousel{
+
+		main {
+			section.sectionMain {
+				div.carousel {
 					margin: 0px 50px 0px 50px;
 					height: 300px;
-					div.carousel-inner{
-						div.carousel-item{
-							img{
+
+					div.carousel-inner {
+						div.carousel-item {
+							img {
 								height: 300px;
 							}
-							div{
-								p{
+
+							div {
+								p {
 									font-size: 25px;
 								}
 							}
 						}
 					}
 				}
-				h2{
+
+				h2 {
 					margin-top: 20px;
 					padding: 10px 0px 0px 0px;
 				}
-				section.banner, .banner1, .banner2, .banner3{
-					p{
+
+				section.banner,
+				.banner1,
+				.banner2,
+				.banner3 {
+					p {
 						font-size: 30px;
 					}
 				}
-				div.lista1{
+
+				div.lista1 {
 					display: flex;
 					flex-direction: column;
-					div.divLista{
+
+					div.divLista {
 						margin: 20px 30px 0px 30px;
 					}
 				}
@@ -531,25 +624,30 @@ a {
 		}
 	}
 }
+
 @media screen and (min-width:910px) {
-	body{
-		header{
-			nav.navbar{
-				div{
-					button.navbar-toggler{
+	body {
+		header {
+			nav.navbar {
+				div {
+					button.navbar-toggler {
 						display: none;
 					}
 				}
-				div.collapse{
-					display: flex!important;
-					flex-basis:auto;
+
+				div.collapse {
+					display: flex !important;
+					flex-basis: auto;
 					align-items: center;
-					div.dropdown{
+
+					div.dropdown {
 						border-style: none;
-						button.btn{
+
+						button.btn {
 							background-color: $background-color_1;
 						}
-						ul.dropdown-menu{
+
+						ul.dropdown-menu {
 							background-color: $background-color_1;
 						}
 					}
@@ -558,48 +656,55 @@ a {
 		}
 	}
 }
+
 @media screen and (min-width:0px) and (max-width:576px) {
-	body{
+	body {
 		main {
-			section.sectionMain{
-				div.carousel{
+			section.sectionMain {
+				div.carousel {
 					margin: 0px;
 					height: 250px;
-					div.carousel-inner{
-						div.carousel-item{
-							img{
+
+					div.carousel-inner {
+						div.carousel-item {
+							img {
 								height: 250px;
 							}
-                            div{
-                                p{
-                                    font-size: 20px;
-                                }
-                            }
+
+							div {
+								p {
+									font-size: 20px;
+								}
+							}
 						}
 					}
 				}
 			}
-			div.contactoDiv{
-				ul{
+
+			div.contactoDiv {
+				ul {
 					margin: 30px 0px 0px 50px;
 					padding: 5px 0px 0px 10px;
 				}
-				form{
+
+				form {
 					fieldset {
 						margin: 30px 0px 0px 70px;
 					}
 				}
-            }
+			}
 		}
 	}
 }
+
 @media screen and (max-width: 400px) {
-	body{
-		main{
-			section.sectionMain{
-				div.lista{
+	body {
+		main {
+			section.sectionMain {
+				div.lista {
 					margin: 0px;
-					div.card{
+
+					div.card {
 						margin: 20px 0px 30px 0px;
 					}
 				}
